prject 1 - completed - updated index meta properties

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,5 +1,5 @@
 {
-  "short_name": "React App",
+  "short_name": "web3 ETH and Solidity project. Built with buildspce",
   "name": "Create React App Sample",
   "icons": [
     {
